--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
 
       # TODO 01 - Add a step to run tests
       - name: Run tests
-        run: go test ./..
+        run: go test ./...
   compile:
     needs: test
     runs-on: ubuntu-latest
