--- a/manifests/rollout.yaml
+++ b/manifests/rollout.yaml
@@ -9,8 +9,10 @@ spec:
   strategy:
     canary:
       steps:
-        - setWeight: 50
-        - pause: { duration: 60s }
+        - setWeight: 25
+        - pause: { duration: 120s }
+        - setWeight: 75
+        - pause: { duration: 120s }
         - setWeight: 100
   selector:
     matchLabels:
@@ -22,7 +24,7 @@ spec:
     spec:
       containers:
         - name: webserver
-          image: ghcr.io/dumitrache-adrian92/ci_cd_lab:latest
+          image: ghcr.io/dumitrache-adrian92/ci_cd_lab:latest@sha256:946b11d36bb44c8e2083961225c7cc41a4b8c0b281427985008a0e7175c2953c
           ports:
             - containerPort: 8080
           imagePullPolicy: Always
